create github pages

--- a/page1.html
+++ b/page1.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header10 cid-qNNmkh4zvj mbr-fullscreen" id="header10-j">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="header10 cid-qNNmkh4zvj mbr-fullscreen" id="header10-j">
 
     
 
