--- a/page10.html
+++ b/page10.html
@@ -51,7 +51,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link dropdown-toggle text-white display-4" href="page1.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-sites mbr-iconfont mbr-iconfont-btn">MAIN PAGE</span>
-                        </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="page8.html">INFOGRAPHICS</a><a class="dropdown-item text-white display-4" href="page4.html">METHODS</a><a class="dropdown-item text-white display-4" href="page6.html">IMPORTANCE</a><a class="dropdown-item text-white display-4" href="page7.html" aria-expanded="false">REPERCUSSIONS</a><a class="dropdown-item text-white display-4" href="page3.html" aria-expanded="false">WHAT INHIBITS CONFIDENCE?</a><a class="text-white dropdown-item display-4" href="page9.html" aria-expanded="false">TALKING TO GIRLS</a><a class="text-white dropdown-item display-4" href="page10.html" aria-expanded="true">PRESENTATION SKILLS</a></div>
+                        </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="page8.html">INFOGRAPHICS</a><a class="dropdown-item text-white display-4" href="page4.html">METHODS</a><a class="dropdown-item text-white display-4" href="page6.html">IMPORTANCE</a><a class="dropdown-item text-white display-4" href="page7.html" aria-expanded="false">REPERCUSSIONS</a><a class="dropdown-item text-white display-4" href="page3.html" aria-expanded="false">WHAT INHIBITS CONFIDENCE?</a><a class="text-white dropdown-item display-4" href="page9.html" aria-expanded="false">TALKING TO GIRLS</a><a class="text-white dropdown-item display-4" href="page10.html" aria-expanded="false">PRESENTATION SKILLS</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html" aria-expanded="false">
                         </a></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html">
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="header4 cid-rybF2Wa4VQ mbr-parallax-background" id="header4-3x">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="header4 cid-rybF2Wa4VQ mbr-parallax-background" id="header4-3x">
 
     
 
@@ -438,7 +438,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
