create github pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item dropdown open">
                     <a class="nav-link link dropdown-toggle text-white display-4" href="page1.html" data-toggle="dropdown-submenu" aria-expanded="true"><span class="mbri-sites mbr-iconfont mbr-iconfont-btn">MAIN PAGE</span>
-                        </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="page8.html">INFOGRAPHICS</a><a class="dropdown-item text-white display-4" href="page4.html">METHODS</a><a class="dropdown-item text-white display-4" href="page6.html">IMPORTANCE</a><a class="dropdown-item text-white display-4" href="page7.html" aria-expanded="false">REPERCUSSIONS</a><a class="dropdown-item text-white display-4" href="page3.html" aria-expanded="false">WHAT INHIBITS CONFIDENCE?</a><a class="text-white dropdown-item display-4" href="page9.html" aria-expanded="false">TALKING TO GIRLS</a><a class="text-white dropdown-item display-4" href="page10.html" aria-expanded="false">PRESENTATION SKILLS</a></div>
+                        </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="page8.html">INFOGRAPHICS</a><a class="dropdown-item text-white display-4" href="page6.html">IMPORTANCE</a><a class="dropdown-item text-white display-4" href="page7.html" aria-expanded="false">REPERCUSSIONS</a><a class="dropdown-item text-white display-4" href="page3.html" aria-expanded="false">WHAT INHIBITS CONFIDENCE?</a><a class="text-white dropdown-item display-4" href="page9.html" aria-expanded="false">TALKING TO GIRLS</a><a class="text-white dropdown-item display-4" href="page10.html" aria-expanded="false">PRESENTATION SKILLS</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="page1.html" aria-expanded="false">
                         </a></li><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="index.html">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header9 cid-qNNkP7dmJc mbr-fullscreen mbr-parallax-background" id="header9-h">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="header9 cid-qNNkP7dmJc mbr-fullscreen mbr-parallax-background" id="header9-h">
 
     
 
@@ -75,7 +75,7 @@
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">Project Bravo</h1>
             
             <p class="mbr-text align-left pb-3 mbr-fonts-style display-5"><strong>
-                A group of 4 Secondary 4 students working on Project Bravo, aiming to empower students with the knowledge on how to improve their self confidence through resource packages. 
+                A group of 4 Secondary 4 students aiming to empower students with the knowledge on how to improve their self confidence through resource packages. 
             </strong></p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="page1.html">LEARN MORE</a></div>
         </div>
